Fix dark mode local storage

--- a/style.css
+++ b/style.css
@@ -144,13 +144,14 @@ section {
  } */
 
  .dark-mode-button {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: bold;
     position: fixed;
     top: 50%;
     /* transform: rotate(-90deg); */
     /* padding-right: 30px; */
     left: -70px;
+    text-transform: uppercase;
 }
 
 /* start dark mode toggle button */
@@ -162,7 +163,7 @@ section {
     cursor: pointer;
     color: var(--light-color);
     background-color: var(--dark-color);
-    padding: 10px 20px 10px 0px;
+    padding: 10px 20px 10px 5px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
@@ -173,14 +174,14 @@ section {
     display: none;
     color: var(--dark-color);
     background-color: var(--light-color);
-    padding: 10px 20px 10px 0px;
+    padding: 10px 20px 10px 5px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;  
 }
 /* end dark mode toggle button */
 
 
-.skills-icon {
+/* .skills-icon {
     text-align: center;
 }
 
@@ -194,7 +195,7 @@ section {
 
 .skills-icon img {
     height: 20px;
-}
+} */
 
 footer {
     display: flex;
@@ -216,4 +217,3 @@ footer i {
 footer a {
     color: var(--dark-color);
 }
-
